Freedom Sanbox Ant Deploy/src/objects/Financial_Account__c.object
<CustomObject>
    <description>To represent Bank and DP accounts.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Relationship with parent a/c</description>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EntityFinancialOrg</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_type__c</fullName>
        <label>Account type</label>
        <picklist>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <description>To capture Bank  Name associated with entity account.</description>
        <inlineHelpText>Bank Name</inlineHelpText>
        <label>Bank Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branch_detail__c</fullName>
        <description>To have Branch details</description>
        <inlineHelpText>Branch details</inlineHelpText>
        <label>Branch detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DP_Id__c</fullName>
        <label>DP Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DP_Name__c</fullName>
        <label>DP Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From_Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IFSC_No__c</fullName>
        <label>IFSC No</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MICR_No__c</fullName>
        <label>MICR No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <description>Portal id is for primary key from java portal database.</description>
        <label>Portal_Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>portal_parent_entity__c</fullName>
        <description>this field shows that this plan is for whom</description>
        <label>portal_parent_entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Financial Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>Bank_Account</fullName>
        <active>true</active>
        <label>Bank Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Demat_Account</fullName>
        <active>true</active>
        <label>Demat Account</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>